src/objects/LG_ScheduleAppointment__c.object
<CustomObject>
    <description>This object is used to capture the Appointment details during Order management orchestration process</description>
    <fields>
        <fullName>LG_AddressName__c</fullName>
        <formula>LG_Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Schedule Appointment</relationshipLabel>
        <relationshipName>Schedule_Appointment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_AgreedInstallDate__c</fullName>
        <label>Agreed Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Schedule Appointment</relationshipLabel>
        <relationshipName>Schedule_Appointment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_DateofFirstEmailNotification__c</fullName>
        <label>Date of First Email Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_DateofFirstSMSNotification__c</fullName>
        <label>Date of First SMS Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_DateofSecondEmailNotification__c</fullName>
        <label>Date of Second Email Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_DateofSecondSMSNotification__c</fullName>
        <label>Date of Second SMS Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_InstallationComments__c</fullName>
        <label>Installation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_InstallationContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installation Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Schedule Appointment</relationshipLabel>
        <relationshipName>Schedule_Appointment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_JobReference__c</fullName>
        <label>Job Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Reasons__c</fullName>
        <label>Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blockage</fullName>
                </value>
                <value>
                    <fullName>Civils/Cabling completed early</fullName>
                </value>
                <value>
                    <fullName>Civils/Cabling Delay</fullName>
                </value>
                <value>
                    <fullName>Customer delay</fullName>
                </value>
                <value>
                    <fullName>Embargo</fullName>
                </value>
                <value>
                    <fullName>Escalation/Expedite</fullName>
                </value>
                <value>
                    <fullName>Failed Install</fullName>
                </value>
                <value>
                    <fullName>Force Majeure</fullName>
                </value>
                <value>
                    <fullName>Initial Date set</fullName>
                </value>
                <value>
                    <fullName>Landlord Restrictions/Site specific RAMS required</fullName>
                </value>
                <value>
                    <fullName>Network Issue</fullName>
                </value>
                <value>
                    <fullName>Noticing/Traffic Management</fullName>
                </value>
                <value>
                    <fullName>OLO Delay</fullName>
                </value>
                <value>
                    <fullName>Other Dependant Order</fullName>
                </value>
                <value>
                    <fullName>Project Roll Out</fullName>
                </value>
                <value>
                    <fullName>Re-plan required</fullName>
                </value>
                <value>
                    <fullName>Resource Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_Slot__c</fullName>
        <label>Slot</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning Slot</fullName>
                </value>
                <value>
                    <fullName>Afternoon Slot</fullName>
                </value>
                <value>
                    <fullName>Evening Slot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Schedule Appointment</relationshipLabel>
        <relationshipName>Schedule_Appointment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Status__c</fullName>
        <description>To capture status of appointment</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Schedule Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Appointment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Agreed_Installed_Date_validation</fullName>
        <active>true</active>
        <description>to validate Agreed install date field with Earliest install date field.</description>
        <errorConditionFormula>LG_AgreedInstallDate__c  &lt;  LG_Solution__r.LG_EarliestInstallDate__c</errorConditionFormula>
        <errorDisplayField>LG_AgreedInstallDate__c</errorDisplayField>
        <errorMessage>Agreed Install date cannot be before Earliest Install dates</errorMessage>
    </validationRules>
</CustomObject>